# agent-experience-capitalization

./: .expcap-project.json  .gitignore  AGENTS.expcap.md  AGENTS.md  AGENTS.project.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  PROJECT_PROMPT.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: expcap_permission_request.sh  expcap_post_tool_use.sh  expcap_pre_tool_use.sh  expcap_session_start.sh  expcap_stop.sh  expcap_user_prompt_submit.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: codex_hooks_lifecycle_micro_spec.md  core_principles.md  expcap_article_review_zh.md  expcap_positioning_zh.md  experience_capitalization_architecture.md  knowledge_layers_micro_spec.md  mvp_spec.md  my_idea.md
examples/: sample_asset.json  sample_trace_bundle.json
mydocs/: memory_knowledge_layering_plan.md
mydocs/codemap/: 2026-05-11_18-48_agent-experience-capitalization项目总图.md
mydocs/micro_specs/: 2026-04-29_10-04_expcap-review-remediation.md  2026-05-08_11-03_auto-start-auto-finish-sqlite-degrade.md  2026-05-08_11-11_hooks-integration-design.md  2026-05-08_11-50_local-prior-knowledge-layer.md  2026-05-08_14-05_injection-policy-layer.md  2026-05-08_14-50_injection-materialization.md  2026-05-08_15-42_codex-hooks-integration.md  2026-05-14_11-20_prove-next-automation.md  2026-05-14_13-15_project-prompt-lifecycle.md  2026-05-15_10-09_primary-write-health-probe.md  2026-05-18_10-40_expcap-review-followup.md  2026-05-18_19-15_faulty-memory-governance-repositioning.md  2026-05-18_19-20_memory-knowledge-layering-plan.md
mydocs/milestones/: 2026-05-08_local-prior-injection-layer-review.md  2026-05-08_local-prior-injection-pr-description.md
runtime/: __init__.py  backends.py
runtime/cli/: __init__.py  __main__.py  main.py
runtime/core/: __init__.py  engine.py  governance_views.py  hook_activity.py  injection_materializer.py  injection_policy.py  knowledge_kinds.py  project_install.py  project_policy.py
runtime/storage/: __init__.py  embeddings.py  fs_store.py  milvus_store.py  sqlite_store.py
schemas/: activation_view.schema.json  asset.schema.json  candidate.schema.json  episode.schema.json  trace_bundle.schema.json
scripts/: codex-skill-quickstart  expcap  expcap-enable  expcap-hook  install-codex-skill
skills/expcap/: SKILL.md
tests/: test_backends.py  test_cli_flow.py  test_engine.py  test_governance_views.py  test_install_project.py  test_milvus_store.py  test_sqlite_store.py
