[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-experience-capitalization"
version = "0.1.0"
description = "Skill-first, local-first runtime for agent experience capitalization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "agent-experience-capitalization contributors" }
]
keywords = [
  "agent-memory",
  "coding-agents",
  "experience-capitalization",
  "milvus",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
milvus = [
  "setuptools<81",
  "pymilvus[milvus-lite]>=2.6,<3",
]

[project.scripts]
expcap = "runtime.cli.main:entrypoint"

[tool.setuptools.packages.find]
include = ["runtime*"]
